--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -1,13 +1,13 @@
 {
   "version": "1.0.0-beta.1",
   "name": "@tmagic/stage",
-  "main": "dist/magic-stage.umd.js",
-  "module": "dist/magic-stage.es.js",
+  "main": "dist/tmagic-stage.umd.js",
+  "module": "dist/tmagic-stage.es.js",
   "types": "dist/types/src/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/magic-stage.es.js",
-      "require": "./dist/magic-stage.umd.js"
+      "import": "./dist/tmagic-stage.es.js",
+      "require": "./dist/tmagic-stage.umd.js"
     }
   },
   "scripts": {
