--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -1,13 +1,13 @@
 {
   "version": "1.0.0-beta.1",
   "name": "@tmagic/table",
-  "main": "dist/magic-table.umd.js",
-  "module": "dist/magic-table.es.js",
+  "main": "dist/tmagic-table.umd.js",
+  "module": "dist/tmagic-table.es.js",
   "types": "dist/types/src/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/magic-table.es.js",
-      "require": "./dist/magic-table.umd.js"
+      "import": "./dist/tmagic-table.es.js",
+      "require": "./dist/tmagic-table.umd.js"
     },
     "./dist/style.css": {
       "import": "./dist/style.css",
