--- a/magic-admin/web/package.json
+++ b/magic-admin/web/package.json
@@ -5,16 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test": "vue-cli-service test:unit --maxWorkers=8",
+    "test": "vue-cli-service test:unit --maxWorkers=8 --coverage",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@tmagic/editor": "^4.0.0-alpha.20",
-    "@tmagic/form": "^4.0.0-alpha.20",
-    "@tmagic/schema": "^4.0.0-alpha.17",
-    "@tmagic/stage": "^4.0.0-alpha.20",
-    "@tmagic/table": "^4.0.0-alpha.20",
-    "@tmagic/utils": "^4.0.0-alpha.17",
+    "@tmagic/editor": "^1.0.0-beta.2",
+    "@tmagic/form": "^1.0.0-beta.2",
+    "@tmagic/schema": "^1.0.0-beta.2",
+    "@tmagic/stage": "^1.0.0-beta.2",
+    "@tmagic/utils": "^1.0.0-beta.2",
     "axios": "^0.25.0",
     "axios-jsonp": "^1.0.4",
     "core-js": "^3.20.0",
@@ -25,7 +24,9 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.16.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
     "@types/jest": "^24.0.19",
     "@types/js-cookie": "^2.2.7",
     "@types/serialize-javascript": "^5.0.1",
