--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0-beta.2",
   "name": "@tmagic/core",
+  "sideEffects": false,
   "main": "dist/tmagic-core.umd.js",
   "module": "dist/tmagic-core.es.js",
   "types": "dist/types/src/index.d.ts",
