--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0-beta.2",
   "name": "@tmagic/schema",
+  "sideEffects": false,
   "main": "src/index.ts",
   "engines": {
     "node": ">=14"
