refactor(stage): 优化拖动体验

--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -27,7 +27,8 @@
     "@tmagic/utils": "^1.0.0-beta.8",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21",
-    "moveable": "^0.28.0"
+    "moveable": "^0.28.0",
+    "moveable-helper": "^0.4.0"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
