--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,6 +25,9 @@
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
+  "keywords": [
+    "vue"
+  ],
   "dependencies": {
     "@tmagic/schema": "^1.0.0-beta.11",
     "events": "^3.3.0"
