--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "node": ">=14"
   },
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
