--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "bootstrap": "lerna bootstrap && npm run prepare",
     "clean:lock": "npx shx rm -rf package-lock.json **/package-lock.json **/**/package-lock.json",
-    "clean:top": "npx rm -rf */**/dist */dist coverage dwt*",
+    "clean:top": "npx shx rm -rf */**/dist */dist coverage dwt*",
     "clean:all": "npm run clean:top && npx shx rm -rf node_modules **/node_modules **/**/node_modules",
     "lint": "eslint . --ext .js,.vue,.ts,.tsx",
     "lint-fix": "eslint . --fix --ext .vue,.js,.ts,.tsx",
     "playground": "npx lerna run dev --scope tmagic-playground --scope runtime-vue3 --parallel",
     "build": "npx lerna run build --scope tmagic-playground --scope runtime-vue3 --scope runtime-vue2 --scope runtime-react --scope @tmagic/* --parallel",
-    "postbuild": "npx mkdir playground/dist/runtime && npx cp -r runtime/vue2/dist ./playground/dist/runtime/vue2 && npx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && npx cp -r runtime/react/dist ./playground/dist/runtime/react",
+    "postbuild": "npx shx mkdir playground/dist/runtime && npx shx cp -r runtime/vue2/dist ./playground/dist/runtime/vue2 && npx shx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && npx cp -r runtime/react/dist ./playground/dist/runtime/react",
     "docs": "cd docs && npm run doc:dev",
     "page": "cd page && vite",
     "page-vue2": "cd page-vue2 && vite",
