--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -9,6 +9,8 @@
     "serve": "vite preview --port 8076"
   },
   "dependencies": {
+    "@tmagic/schema": "^1.0.0-beta.13",
+    "@tmagic/stage": "^1.0.0-beta.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
