--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -9,6 +9,8 @@
     "serve": "vite preview --port 8078"
   },
   "dependencies": {
+    "@tmagic/schema": "^1.0.0-beta.13",
+    "@tmagic/stage": "^1.0.0-beta.13",
     "axios": "^0.25.0",
     "vue": "^3.2.0"
   },
