--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap && npm run prepare",
-    "clean:lock": "npx shx rm -rf package-lock.json **/package-lock.json **/**/package-lock.json",
-    "clean:top": "npx shx rm -rf */**/dist */dist coverage dwt*",
-    "clean:all": "npm run clean:top && npx shx rm -rf node_modules **/node_modules **/**/node_modules",
+    "clean:lock": "rimraf package-lock.json **/package-lock.json **/**/package-lock.json",
+    "clean:top": "rimraf */**/dist */dist coverage dwt*",
+    "clean:modules": "rimraf node_modules **/node_modules **/**/node_modules",
+    "clean:all": "npm run clean:top && npm run clean:modules",
     "lint": "eslint . --ext .js,.vue,.ts,.tsx",
     "lint-fix": "eslint . --fix --ext .vue,.js,.ts,.tsx",
-    "playground": "npx lerna run dev --scope tmagic-playground --scope runtime-vue3 --parallel",
-    "build": "npx lerna run build --scope tmagic-playground --scope runtime-vue3 --scope runtime-vue2 --scope runtime-react --scope @tmagic/* --parallel",
-    "postbuild": "npx shx mkdir playground/dist/runtime && npx shx cp -r runtime/vue2/dist ./playground/dist/runtime/vue2 && npx shx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && npx cp -r runtime/react/dist ./playground/dist/runtime/react",
+    "playground": "lerna run dev --scope tmagic-playground --scope runtime-vue3 --parallel",
+    "build": "lerna run build --scope tmagic-playground --scope runtime-vue3 --scope runtime-vue2 --scope runtime-react --scope @tmagic/* --parallel",
+    "postbuild": "shx mkdir playground/dist/runtime && shx cp -r runtime/vue2/dist ./playground/dist/runtime/vue2 && shx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && cp -r runtime/react/dist ./playground/dist/runtime/react",
     "docs": "cd docs && npm run doc:dev",
     "page": "cd page && vite",
     "page-vue2": "cd page-vue2 && vite",
     "page-react": "cd page-react && vite",
     "reinstall": "npm run clean:all && npm run bootstrap",
-    "test": "npx lerna run test --scope @tmagic/* --parallel",
-    "test:coverage": "npx lerna run test:coverage --scope @tmagic/* --parallel",
+    "test": "lerna run test --scope @tmagic/* --parallel",
+    "test:coverage": "lerna run test:coverage --scope @tmagic/* --parallel",
     "prepare": "husky install",
     "commit": "git-cz"
   },
@@ -55,6 +56,8 @@
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.1",
+    "rimraf": "^3.0.2",
+    "shx": "^0.3.4",
     "typescript": "^4.3.4"
   },
   "config": {
