fix: 修复node版本16安装依赖失败的问题

--- a/lerna.json
+++ b/lerna.json
@@ -17,7 +17,8 @@
         "@vue/test-utils",
         "element-plus",
         "@element-plus/icons",
-        "@testing-library/vue"
+        "@testing-library/vue",
+        "@vue/composition-api"
       ]
     }
   }
