--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -45,6 +45,7 @@
     "@tmagic/schema": "^1.0.0-beta.13",
     "@tmagic/stage": "^1.0.0-beta.13",
     "@tmagic/utils": "^1.0.0-beta.13",
+    "buffer": "^6.0.3",
     "color": "^3.1.3",
     "element-plus": "^2.1.7",
     "events": "^3.3.0",
