--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,9 @@
 {
   "version": "1.0.0-beta.14",
   "name": "@tmagic/core",
-  "sideEffects": false,
+  "sideEffects": [
+    "dist/*"
+  ],
   "main": "dist/tmagic-core.umd.js",
   "module": "dist/tmagic-core.es.js",
   "types": "dist/types/src/index.d.ts",
@@ -13,7 +15,8 @@
     "./dist/style.css": {
       "import": "./dist/style.css",
       "require": "./dist/style.css"
-    }
+    },
+    "./*": "./*"
   },
   "license": "Apache-2.0",
   "scripts": {
