--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,7 +1,10 @@
 {
   "version": "1.0.0-beta.14",
   "name": "@tmagic/form",
-  "sideEffects": false,
+  "sideEffects": [
+    "dist/*",
+    "src/theme/*"
+  ],
   "main": "dist/tmagic-form.umd.js",
   "module": "dist/tmagic-form.es.js",
   "style": "dist/style.css",
@@ -14,7 +17,8 @@
     "./dist/style.css": {
       "import": "./dist/style.css",
       "require": "./dist/style.css"
-    }
+    },
+    "./*": "./*"
   },
   "license": "Apache-2.0",
   "scripts": {
@@ -32,7 +36,7 @@
   "dependencies": {
     "@element-plus/icons": "0.0.11",
     "@tmagic/utils": "^1.0.0-beta.14",
-    "element-plus": "^2.1.7",
+    "element-plus": "^2.2.0",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.2",
     "sortablejs": "^1.14.0",
