refactor(magic-admin): 升级vue-cli5

--- a/magic-admin/web/package.json
+++ b/magic-admin/web/package.json
@@ -9,50 +9,52 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@tmagic/editor": "^1.0.0-beta.2",
-    "@tmagic/form": "^1.0.0-beta.2",
-    "@tmagic/schema": "^1.0.0-beta.2",
-    "@tmagic/stage": "^1.0.0-beta.2",
-    "@tmagic/utils": "^1.0.0-beta.2",
-    "axios": "^0.25.0",
+    "@tmagic/editor": "^1.0.0-beta.16",
+    "@tmagic/form": "^1.0.0-beta.16",
+    "@tmagic/schema": "^1.0.0-beta.16",
+    "@tmagic/stage": "^1.0.0-beta.16",
+    "@tmagic/utils": "^1.0.0-beta.16",
+    "axios": "^0.27.2",
     "axios-jsonp": "^1.0.4",
     "core-js": "^3.20.0",
     "element-plus": "^2.2.0",
     "js-cookie": "^3.0.0",
     "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
+    "serialize-javascript": "^6.0.0",
     "vue": "^3.2.26",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
-    "@babel/preset-env": "^7.16.11",
-    "@types/jest": "^24.0.19",
-    "@types/js-cookie": "^2.2.7",
-    "@types/serialize-javascript": "^5.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.2.26",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-rc.17",
-    "eslint": "^7.29.0",
-    "eslint-config-tencent": "^1.0.1",
-    "eslint-plugin-prettier": "^3.3.1",
+    "@types/jest": "^27.0.1",
+    "@types/js-cookie": "^3.0.2",
+    "@types/serialize-javascript": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-typescript": "~5.0.0",
+    "@vue/cli-plugin-unit-jest": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-typescript": "^9.1.0",
+    "@vue/test-utils": "^2.0.0-0",
+    "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^27.0.6",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-tencent": "^1.0.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-vue": "^7.0.0",
-    "moment-timezone": "^0.5.34",
-    "prettier": "^2.5.1",
-    "sass": "^1.45.0",
-    "sass-loader": "^8.0.2",
-    "serialize-javascript": "^6.0.0",
-    "typescript": "~4.1.5",
-    "vue-jest": "^5.0.0-0"
+    "eslint-plugin-vue": "^8.0.3",
+    "jest": "^27.0.5",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "prettier": "^2.4.1",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0",
+    "ts-jest": "^27.0.4",
+    "typescript": "~4.5.5",
+    "vue-jest": "^3.0.7"
   }
 }
