--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta.16",
+  "version": "1.0.0-rc.1",
   "name": "@tmagic/core",
   "sideEffects": [
     "dist/*"
@@ -33,7 +33,7 @@
     "vue"
   ],
   "dependencies": {
-    "@tmagic/schema": "^1.0.0-beta.16",
+    "@tmagic/schema": "^1.0.0-rc.1",
     "events": "^3.3.0"
   },
   "devDependencies": {
