--- a/packages/ui-vue2/package.json
+++ b/packages/ui-vue2/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta.16",
+  "version": "1.0.0-rc.1",
   "name": "@tmagic/ui-vue2",
   "main": "src/index.ts",
   "scripts": {
