--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta.16",
+  "version": "1.0.0-rc.1",
   "name": "@tmagic/utils",
   "main": "dist/tmagic-utils.umd.js",
   "module": "dist/tmagic-utils.es.js",
@@ -24,7 +24,7 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "@tmagic/schema": "^1.0.0-beta.16",
+    "@tmagic/schema": "^1.0.0-rc.1",
     "moment": "^2.29.2"
   },
   "devDependencies": {
