--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmagic-playground",
-  "version": "1.0.0-beta.16",
+  "version": "1.0.0-rc.1",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@element-plus/icons": "0.0.11",
-    "@tmagic/editor": "^1.0.0-beta.16",
-    "@tmagic/form": "^1.0.0-beta.16",
-    "@tmagic/schema": "^1.0.0-beta.16",
-    "@tmagic/stage": "^1.0.0-beta.16",
-    "@tmagic/utils": "^1.0.0-beta.16",
+    "@tmagic/editor": "^1.0.0-rc.1",
+    "@tmagic/form": "^1.0.0-rc.1",
+    "@tmagic/schema": "^1.0.0-rc.1",
+    "@tmagic/stage": "^1.0.0-rc.1",
+    "@tmagic/utils": "^1.0.0-rc.1",
     "element-plus": "^2.2.0",
     "serialize-javascript": "^6.0.0",
     "vue": "^3.2.0",
