--- a/runtime/vue2/package.json
+++ b/runtime/vue2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-vue2",
-  "version": "1.0.0-beta.16",
+  "version": "1.0.0-rc.1",
   "private": true,
   "scripts": {
     "dev": "npm run build && npm run serve",
@@ -9,8 +9,8 @@
     "serve": "vite preview --port 8077"
   },
   "dependencies": {
-    "@tmagic/schema": "^1.0.0-beta.16",
-    "@tmagic/stage": "^1.0.0-beta.16",
+    "@tmagic/schema": "^1.0.0-rc.1",
+    "@tmagic/stage": "^1.0.0-rc.1",
     "@vue/composition-api": "1.0.5",
     "vue": "^2.6.14"
   },
