--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.0",
     "@babel/preset-env": "^7.14.2",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
@@ -56,6 +57,7 @@
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.1",
+    "recast": "^0.20.4",
     "rimraf": "^3.0.2",
     "shx": "^0.3.4",
     "typescript": "^4.3.4"
