--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -43,6 +43,7 @@
     "typescript"
   ],
   "dependencies": {
+    "@babel/core": "^7.18.0",
     "@element-plus/icons": "0.0.11",
     "@tmagic/core": "^1.0.0-rc.1",
     "@tmagic/form": "^1.0.0-rc.1",
@@ -54,14 +55,20 @@
     "element-plus": "^2.2.0",
     "events": "^3.3.0",
     "keycon": "^1.1.2",
+    "gesto": "^1.7.0",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.32.1",
     "serialize-javascript": "^6.0.0",
     "vue": "^3.2.0"
   },
+  "peerDependencies": {
+    "@tmagic/form": "^1.0.0-rc.1",
+    "element-plus": "^2.2.0",
+    "vue": "^3.2.0"
+  },
   "devDependencies": {
     "@types/events": "^3.0.0",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.5.1",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^15.12.4",
     "@types/serialize-javascript": "^5.0.1",
@@ -70,6 +77,7 @@
     "@vue/compiler-sfc": "^3.2.0",
     "@vue/test-utils": "^2.0.0-rc.20",
     "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "babel-jest": "^27.0.6",
     "jest": "^27.5.1",
     "jest-serializer-vue": "^2.0.2",
     "jest-transform-stub": "^2.0.0",
