--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "recast": "^0.20.4",
     "typescript": "^4.3.4",
     "vite": "^2.3.7"
   }
