--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -20,6 +20,7 @@
     "@vue/compiler-sfc": "^3.2.0",
     "@vue/test-utils": "^2.0.0-rc.20",
     "recast": "^0.20.4",
+    "rollup": "^2.25.0",
     "rollup-plugin-external-globals": "^0.6.1",
     "sass": "^1.35.1",
     "typescript": "^4.3.4",
