--- a/runtime/vue2/package.json
+++ b/runtime/vue2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-vue2",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0-rc.2",
   "private": true,
   "scripts": {
     "dev": "npm run build && npm run serve",
@@ -9,8 +9,8 @@
     "serve": "vite preview --port 8077"
   },
   "dependencies": {
-    "@tmagic/schema": "^1.0.0-rc.1",
-    "@tmagic/stage": "^1.0.0-rc.1",
+    "@tmagic/schema": "^1.0.0-rc.2",
+    "@tmagic/stage": "^1.0.0-rc.2",
     "@vue/composition-api": "1.0.5",
     "vue": "^2.6.14"
   },
@@ -19,8 +19,8 @@
     "recast": "^0.20.4",
     "rollup": "^2.25.0",
     "rollup-plugin-external-globals": "^0.6.1",
+    "vite": "^2.3.7",
     "vite-plugin-vue2": "^2.0.1",
-    "vue-template-compiler": "^2.6.14",
-    "vite": "^2.3.7"
+    "vue-template-compiler": "^2.6.14"
   }
 }
