--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@tmagic/schema": "^1.0.0-rc.2",
     "delegate": "^3.2.0",
+    "qrcode": "^1.5.0",
     "tiny-emitter": "^2.1.0",
     "vue": "^3.2.0"
   },
   "devDependencies": {
     "@testing-library/vue": "^6.4.2",
+    "@types/qrcode": "^1.4.2",
     "@vue/compiler-sfc": "^3.2.0",
     "@vue/test-utils": "^2.0.0-rc.12"
   }
