feat: 支持playground:vue2/playground:react命令
vue2 react runtime path 出错导致vue2 react playground运行出错；vue2中存在多个composition-api导致出错

fix #82 fix #68

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint . --ext .js,.vue,.ts,.tsx",
     "lint-fix": "eslint . --fix --ext .vue,.js,.ts,.tsx",
     "playground": "lerna run dev --scope tmagic-playground --scope runtime-vue3 --parallel",
+    "playground:vue2": "lerna run dev:vue2 --scope tmagic-playground --scope runtime-vue2 --parallel",
+    "playground:react": "lerna run dev:react --scope tmagic-playground --scope runtime-react --parallel",
     "build": "lerna run build --scope tmagic-playground --scope runtime-vue3 --scope runtime-vue2 --scope runtime-react --scope @tmagic/* --parallel",
     "postbuild": "shx mkdir playground/dist/runtime && shx cp -r runtime/vue2/dist ./playground/dist/runtime/vue2 && shx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && cp -r runtime/react/dist ./playground/dist/runtime/react",
     "docs": "cd docs && npm run doc:dev",
