--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tmagic/schema": "^1.0.0-rc.3",
+    "qrcode": "^1.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
