--- a/packages/ui-vue2/package.json
+++ b/packages/ui-vue2/package.json
@@ -13,6 +13,12 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
+    "@tmagic/schema": "^1.0.0-rc.3",
+    "@vue/composition-api": "1.0.5",
+    "vue": "^2.6.14",
+    "qrcode": "^1.5.0"
+  },
+  "peerDependencies": {
     "@vue/composition-api": "1.0.5",
     "vue": "^2.6.14"
   },
