--- a/lerna.json
+++ b/lerna.json
@@ -14,7 +14,9 @@
         "vue",
         "react",
         "react-dom",
+        "vue-template-compiler",
         "@vue/test-utils",
+        "vite-plugin-vue2",
         "element-plus",
         "@element-plus/icons",
         "@testing-library/vue",
