build: 移出lerna，改用pnpm

--- a/package.json
+++ b/package.json
@@ -3,25 +3,24 @@
   "name": "tmagic",
   "private": true,
   "scripts": {
-    "bootstrap": "lerna bootstrap && npm run prepare",
-    "clean:lock": "rimraf package-lock.json **/package-lock.json **/**/package-lock.json",
+    "bootstrap": "pnpm i && pnpm prepare && cd runtime/vue2 && npm i",
     "clean:top": "rimraf */**/dist */dist coverage dwt*",
     "clean:modules": "rimraf node_modules **/node_modules **/**/node_modules",
-    "clean:all": "npm run clean:top && npm run clean:modules",
+    "clean:all": "pnpm clean:top && pnpm clean:modules",
     "lint": "eslint . --ext .js,.vue,.ts,.tsx",
     "lint-fix": "eslint . --fix --ext .vue,.js,.ts,.tsx",
-    "playground": "lerna run dev --scope tmagic-playground --scope runtime-vue3 --parallel",
-    "playground:vue2": "lerna run dev:vue2 --scope tmagic-playground --scope runtime-vue2 --parallel",
-    "playground:react": "lerna run dev:react --scope tmagic-playground --scope runtime-react --parallel",
-    "build": "lerna run build --scope tmagic-playground --scope runtime-vue3 --scope runtime-vue2 --scope runtime-react --scope @tmagic/* --parallel",
+    "playground": "pnpm --filter \"runtime-vue3\" --filter \"tmagic-playground\" dev",
+    "playground:vue2": "pnpm --filter \"runtime-vue2\" --filter \"tmagic-playground\" dev:vue2",
+    "playground:react": "pnpm --filter \"runtime-react\" --filter \"tmagic-playground\" dev:react",
+    "build": "pnpm --filter \"@tmagic/*\" --filter \"runtime-*\" --filter \"tmagic-playground\" build",
     "postbuild": "shx mkdir playground/dist/runtime && shx cp -r runtime/vue2/dist ./playground/dist/runtime/vue2 && shx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && cp -r runtime/react/dist ./playground/dist/runtime/react",
     "docs": "cd docs && npm run doc:dev",
     "page": "cd page && vite",
     "page-vue2": "cd page-vue2 && vite",
     "page-react": "cd page-react && vite",
-    "reinstall": "npm run clean:all && npm run bootstrap",
-    "test": "lerna run test --scope @tmagic/* --parallel",
-    "test:coverage": "lerna run test:coverage --scope @tmagic/* --parallel",
+    "reinstall": "pnpm clean:all && pnpm bootstrap",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "prepare": "husky install",
     "commit": "git-cz"
   },
@@ -41,13 +40,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
-    "@babel/preset-env": "^7.14.2",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
-    "@vue/cli-plugin-babel": "^5.0.4",
-    "babel-eslint": "^10.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.29.0",
     "eslint-config-tencent": "^1.0.1",
@@ -56,13 +52,13 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-vue": "^7.11.1",
     "husky": "^7.0.0",
-    "lerna": "^4.0.0",
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.1",
     "recast": "^0.20.4",
     "rimraf": "^3.0.2",
     "shx": "^0.3.4",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "vitest": "^0.14.1"
   },
   "config": {
     "commitizen": {
