--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -18,7 +18,7 @@
     "@types/node": "^15.12.4",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.2.0",
-    "@vue/test-utils": "^2.0.0-rc.20",
+    "@vue/test-utils": "^2.0.0",
     "recast": "^0.20.4",
     "rollup": "^2.25.0",
     "rollup-plugin-external-globals": "^0.6.1",
