--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -22,9 +22,7 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "build": "vite build",
-    "test": "jest --maxWorkers=8",
-    "test:coverage": "jest --maxWorkers=16 --coverage"
+    "build": "vite build"
   },
   "engines": {
     "node": ">=14"
@@ -48,21 +46,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
-    "@types/jest": "^27.5.1",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^15.12.4",
     "@types/sortablejs": "^1.10.7",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vitejs/plugin-vue-jsx": "^1.1.6",
     "@vue/compiler-sfc": "^3.2.0",
-    "@vue/test-utils": "^2.0.0-rc.20",
-    "@vue/vue3-jest": "^27.0.0-alpha.4",
-    "babel-jest": "^27.0.6",
-    "jest": "^27.5.1",
-    "jest-serializer-vue": "^2.0.2",
-    "jest-transform-stub": "^2.0.0",
+    "@vue/test-utils": "^2.0.0",
     "sass": "^1.35.1",
-    "ts-jest": "^27.1.4",
     "typescript": "^4.3.4",
     "vite": "^2.3.7",
     "vite-plugin-dts": "^0.9.6",
