--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,6 +24,6 @@
     "@testing-library/vue": "^6.4.2",
     "@types/qrcode": "^1.4.2",
     "@vue/compiler-sfc": "^3.2.0",
-    "@vue/test-utils": "^2.0.0-rc.12"
+    "@vue/test-utils": "^2.0.0"
   }
 }
