--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,9 +12,7 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "build": "vite build",
-    "test": "jest --maxWorkers=8",
-    "test:coverage": "jest --maxWorkers=16 --coverage"
+    "build": "vite build"
   },
   "engines": {
     "node": ">=14"
@@ -28,12 +26,7 @@
     "moment": "^2.29.2"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.1",
     "@types/node": "^15.12.4",
-    "jest": "^27.5.1",
-    "jest-serializer-vue": "^2.0.2",
-    "jest-transform-stub": "^2.0.0",
-    "ts-jest": "^27.1.4",
     "typescript": "^4.3.4",
     "vite": "^2.3.7",
     "vite-plugin-dts": "^0.9.6"
