test: jest 改成 vitest

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "page-vue2": "cd page-vue2 && vite",
     "page-react": "cd page-react && vite",
     "reinstall": "pnpm clean:all && pnpm bootstrap",
-    "test": "vitest",
+    "test": "vitest run",
     "coverage": "vitest run --coverage",
     "prepare": "husky install",
     "commit": "git-cz"
@@ -42,8 +42,11 @@
     "@babel/core": "^7.18.0",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@types/node": "^15.12.4",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "@vitejs/plugin-vue": "^1.2.3",
+    "c8": "^7.11.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.29.0",
     "eslint-config-tencent": "^1.0.1",
@@ -52,12 +55,14 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-vue": "^7.11.1",
     "husky": "^7.0.0",
+    "jsdom": "^19.0.0",
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.1",
     "recast": "^0.20.4",
     "rimraf": "^3.0.2",
     "shx": "^0.3.4",
     "typescript": "^4.3.4",
+    "vite": "^2.3.7",
     "vitest": "^0.14.1"
   },
   "config": {
