--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "test": "vitest run",
     "coverage": "vitest run --coverage",
     "prepare": "husky install",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "release": "node scripts/release.js"
   },
   "engines": {
     "node": ">=14"
@@ -47,19 +49,25 @@
     "@typescript-eslint/parser": "^4.28.0",
     "@vitejs/plugin-vue": "^1.2.3",
     "c8": "^7.11.3",
+    "chalk": "^4.1.0",
+    "conventional-changelog-cli": "^2.2.2",
     "cz-conventional-changelog": "^3.3.0",
+    "enquirer": "^2.3.6",
     "eslint": "^7.29.0",
     "eslint-config-tencent": "^1.0.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-vue": "^7.11.1",
+    "execa": "^4.0.2",
     "husky": "^7.0.0",
     "jsdom": "^19.0.0",
     "lint-staged": "^11.0.1",
+    "minimist": "^1.2.6",
     "prettier": "^2.3.1",
     "recast": "^0.20.4",
     "rimraf": "^3.0.2",
+    "semver": "^7.3.7",
     "shx": "^0.3.4",
     "typescript": "^4.3.4",
     "vite": "^2.3.7",
