--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "playground": "pnpm --filter \"runtime-vue3\" --filter \"tmagic-playground\" dev",
     "playground:vue2": "pnpm --filter \"runtime-vue2\" --filter \"tmagic-playground\" dev:vue2",
     "playground:react": "pnpm --filter \"runtime-react\" --filter \"tmagic-playground\" dev:react",
-    "build": "pnpm --filter \"@tmagic/*\" --filter \"runtime-*\" --filter \"tmagic-playground\" build",
-    "postbuild": "shx mkdir playground/dist/runtime && shx cp -r runtime/vue2/dist ./playground/dist/runtime/vue2 && shx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && cp -r runtime/react/dist ./playground/dist/runtime/react",
+    "build": "pnpm --filter \"@tmagic/*\" build",
+    "build:playground": "pnpm --filter \"runtime-*\" --filter \"tmagic-playground\" build",
+    "postbuild:playground": "shx mkdir playground/dist/runtime && shx cp -r runtime/vue2/dist ./playground/dist/runtime/vue2 && shx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && cp -r runtime/react/dist ./playground/dist/runtime/react",
     "docs": "cd docs && npm run doc:dev",
     "page": "cd page && vite",
     "page-vue2": "cd page-vue2 && vite",
