chore(docs): 升级vuepress

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "pnpm --filter \"@tmagic/*\" build",
     "build:playground": "pnpm --filter \"runtime-*\" --filter \"tmagic-playground\" build",
     "postbuild:playground": "shx mkdir playground/dist/runtime && shx cp -r runtime/vue2/dist ./playground/dist/runtime/vue2 && shx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && cp -r runtime/react/dist ./playground/dist/runtime/react",
-    "docs": "cd docs && npm run doc:dev",
+    "docs": "pnpm --filter \"docs\" dev",
+    "build:docs": "pnpm --filter \"docs\" build",
     "page": "cd page && vite",
     "page-vue2": "cd page-vue2 && vite",
     "page-react": "cd page-react && vite",
