--- a/docs/package.json
+++ b/docs/package.json
@@ -8,11 +8,20 @@
   },
   "dependencies": {
     "@element-plus/icons": "0.0.11",
+    "@tmagic/form": "^1.0.0-rc.7",
+    "@tmagic/schema": "^1.0.0-rc.7",
+    "@tmagic/utils": "^1.0.0-rc.7",
     "element-plus": "^2.2.0",
-    "highlight.js": "^11.2.0"
+    "highlight.js": "^11.2.0",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "vue": "^3.2.0"
   },
   "devDependencies": {
-    "@vuepress/cli": "^2.0.0-beta.26",
-    "vuepress": "^2.0.0-beta.26"
+    "@vuepress/bundler-vite": "^2.0.0-beta.48",
+    "@vuepress/cli": "^2.0.0-beta.48",
+    "@vuepress/client": "^2.0.0-beta.48",
+    "@vuepress/theme-default": "^2.0.0-beta.48",
+    "vuepress": "^2.0.0-beta.48"
   }
 }
