--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,7 @@
     "@vuepress/bundler-vite": "^2.0.0-beta.48",
     "@vuepress/cli": "^2.0.0-beta.48",
     "@vuepress/client": "^2.0.0-beta.48",
+    "@vuepress/plugin-search": "^2.0.0-beta.48",
     "@vuepress/theme-default": "^2.0.0-beta.48",
     "vuepress": "^2.0.0-beta.48"
   }
