--- a/playground/package.json
+++ b/playground/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0-rc.6",
   "private": true,
   "scripts": {
+    "clean:top": "rimraf dist",
     "dev": "vite --mode vue3",
     "dev:vue2": "vite --mode vue2",
     "dev:react": "vite --mode react",
-    "build": "node --max_old_space_size=8192 node_modules/vite/bin/vite.js build --mode vue3",
+    "build": "npm run clean:top && node --max_old_space_size=8192 node_modules/vite/bin/vite.js build --mode vue3",
     "serve": "vite preview"
   },
   "dependencies": {
