--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmagic-playground",
-  "version": "1.0.0-rc.6",
+  "version": "1.0.0-rc.8",
   "private": true,
   "scripts": {
     "clean:top": "rimraf dist",
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "@element-plus/icons": "0.0.11",
-    "@tmagic/editor": "^1.0.0-rc.7",
-    "@tmagic/form": "^1.0.0-rc.7",
-    "@tmagic/schema": "^1.0.0-rc.7",
-    "@tmagic/stage": "^1.0.0-rc.7",
-    "@tmagic/utils": "^1.0.0-rc.7",
+    "@tmagic/editor": "1.0.0-rc.8",
+    "@tmagic/form": "1.0.0-rc.8",
+    "@tmagic/schema": "1.0.0-rc.8",
+    "@tmagic/stage": "1.0.0-rc.8",
+    "@tmagic/utils": "1.0.0-rc.8",
     "element-plus": "^2.2.0",
     "monaco-editor": "^0.32.1",
     "serialize-javascript": "^6.0.0",
