--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-react",
-  "version": "1.0.0-rc.7",
+  "version": "1.0.0-rc.8",
   "private": true,
   "scripts": {
     "dev:react": "npm run build && npm run serve",
@@ -9,8 +9,8 @@
     "serve": "vite preview --port 8076"
   },
   "dependencies": {
-    "@tmagic/schema": "^1.0.0-rc.7",
-    "@tmagic/stage": "^1.0.0-rc.7",
+    "@tmagic/schema": "1.0.0-rc.8",
+    "@tmagic/stage": "1.0.0-rc.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
