--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc.13",
+  "version": "1.0.0",
   "name": "@tmagic/schema",
   "sideEffects": false,
   "main": "dist/tmagic-schema.umd.js",
