--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -22,7 +22,7 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "build": "vite build"
+    "build": "vue-tsc --noEmit && vite build"
   },
   "engines": {
     "node": ">=14"
@@ -50,7 +50,7 @@
     "@tmagic/utils": "1.0.2",
     "buffer": "^6.0.3",
     "color": "^3.1.3",
-    "element-plus": "^2.2.0",
+    "element-plus": "^2.2.6",
     "events": "^3.3.0",
     "gesto": "^1.7.0",
     "keycon": "^1.1.2",
@@ -61,7 +61,7 @@
   },
   "peerDependencies": {
     "@tmagic/form": "1.0.2",
-    "element-plus": "^2.2.0",
+    "element-plus": "^2.2.6",
     "monaco-editor": "^0.32.1",
     "vue": "^3.2.0"
   },
@@ -78,6 +78,6 @@
     "typescript": "^4.3.4",
     "vite": "^2.3.7",
     "vite-plugin-dts": "^0.9.6",
-    "vue-tsc": "^0.0.24"
+    "vue-tsc": "^0.38.2"
   }
 }
