--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -22,7 +22,7 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "build": "vite build"
+    "build": "vue-tsc --noEmit && vite build"
   },
   "engines": {
     "node": ">=14"
@@ -34,14 +34,14 @@
   "dependencies": {
     "@element-plus/icons": "0.0.11",
     "@tmagic/utils": "1.0.2",
-    "element-plus": "^2.2.0",
+    "element-plus": "^2.2.6",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.2",
     "sortablejs": "^1.14.0",
     "vue": "^3.2.0"
   },
   "peerDependencies": {
-    "element-plus": "^2.2.0",
+    "element-plus": "^2.2.6",
     "vue": "^3.2.0"
   },
   "devDependencies": {
@@ -57,6 +57,6 @@
     "typescript": "^4.3.4",
     "vite": "^2.3.7",
     "vite-plugin-dts": "^0.9.6",
-    "vue-tsc": "^0.0.24"
+    "vue-tsc": "^0.38.2"
   }
 }
