--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -20,7 +20,7 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "build": "vite build"
+    "build": "vue-tsc --noEmit && vite build"
   },
   "engines": {
     "node": ">=14"
@@ -31,13 +31,13 @@
   },
   "dependencies": {
     "@tmagic/form": "1.0.2",
-    "element-plus": "^2.2.0",
+    "element-plus": "^2.2.6",
     "lodash-es": "^4.17.21",
     "vue": "^3.2.0"
   },
   "peerDependencies": {
     "@tmagic/form": "1.0.2",
-    "element-plus": "^2.2.0",
+    "element-plus": "^2.2.6",
     "vue": "^3.2.0"
   },
   "devDependencies": {
@@ -51,6 +51,6 @@
     "typescript": "^4.3.4",
     "vite": "^2.3.7",
     "vite-plugin-dts": "^0.9.6",
-    "vue-tsc": "^0.0.24"
+    "vue-tsc": "^0.38.2"
   }
 }
