--- a/docs/package.json
+++ b/docs/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@element-plus/icons": "0.0.11",
-    "@tmagic/form": "^1.0.0-rc.7",
-    "@tmagic/schema": "^1.0.0-rc.7",
-    "@tmagic/utils": "^1.0.0-rc.7",
+    "@tmagic/form": "^1.0.2",
+    "@tmagic/schema": "^1.0.2",
+    "@tmagic/utils": "^1.0.2",
     "element-plus": "^2.2.6",
     "highlight.js": "^11.2.0",
     "lodash": "^4.17.21",
