--- a/runtime/vue2/package.json
+++ b/runtime/vue2/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.2",
   "private": true,
   "scripts": {
-    "dev:vue2": "npm run build && npm run serve",
-    "start": "node scripts/dev.js && vite",
-    "build": "node scripts/build.js && vite build",
-    "serve": "vite preview --port 8077"
+    "dev:vue2": "npm run entry && npm run build:lib & npm run dev:html",
+    "build": "npm run entry && vite build",
+    "serve": "vite preview",
+    "entry": "node scripts/build.js",
+    "build:lib": "vite build --mode lib",
+    "dev:html": "vite --port 8078"
   },
   "dependencies": {
     "@tmagic/schema": "1.0.2",
@@ -21,7 +23,7 @@
     "rollup": "^2.25.0",
     "rollup-plugin-external-globals": "^0.6.1",
     "sass": "^1.35.1",
-    "vite": "^2.3.7",
+    "vite": "^ 2.9.13",
     "vite-plugin-vue2": "^2.0.1",
     "vue-template-compiler": "^2.6.14"
   }
