--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "packageManager": "pnpm@7.1.9",
   "scripts": {
-    "bootstrap": "pnpm i && npm run build && npm run install-vue2  && pnpm prepare",
+    "bootstrap": "pnpm i && pnpm build",
     "clean:top": "rimraf */**/dist */dist coverage dwt*",
     "clean:modules": "rimraf node_modules **/node_modules **/**/node_modules",
     "clean:all": "pnpm clean:top && pnpm clean:modules",
     "lint": "eslint . --ext .js,.vue,.ts,.tsx",
     "lint-fix": "eslint . --fix --ext .vue,.js,.ts,.tsx",
     "playground": "pnpm --filter \"runtime-vue3\" --filter \"tmagic-playground\" dev",
+    "pg": "pnpm playground",
     "playground:vue2": "pnpm --filter \"runtime-vue2\" --filter \"tmagic-playground\" dev:vue2",
+    "pg:vue2": "pnpm playground:vue2",
     "playground:react": "pnpm --filter \"runtime-react\" --filter \"tmagic-playground\" dev:react",
+    "pg:react": "pnpm playground:react",
     "build": "pnpm --filter \"@tmagic/*\" build",
     "build:playground": "pnpm --filter \"runtime-*\" --filter \"tmagic-playground\" build",
     "postbuild:playground": "shx mkdir playground/dist/runtime && shx cp -r runtime/vue2/dist ./playground/dist/runtime/vue2 && shx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && cp -r runtime/react/dist ./playground/dist/runtime/react",
@@ -54,6 +57,7 @@
     "@vitejs/plugin-vue": "^1.2.3",
     "c8": "^7.11.3",
     "chalk": "^4.1.0",
+    "commitizen": "^4.2.4",
     "conventional-changelog-cli": "^2.2.2",
     "cz-conventional-changelog": "^3.3.0",
     "enquirer": "^2.3.6",
