--- a/docs/package.json
+++ b/docs/package.json
@@ -16,6 +16,7 @@
     "highlight.js": "^11.2.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "serialize-javascript": "^6.0.0",
     "vue": "^3.2.0"
   },
   "devDependencies": {
